--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <div class="form-container">
         <div>
             <label for="first_lastname"> Nome e Cognome</label>
-            <input type="text" id="first_lastname" name="first-lastaname">
+            <input type="text" id="first_lastname" name="first-lastaname" value="name">
         </div>
 
         <div>
             <label for="distance_km"> km da percorrere</label>
-            <input type="text" id="distance_km" name="distance-in-km">
+            <input type="text" id="distance_km" name="distance-in-km" value="km">
         </div>
 
         <div>
             <label for="age"> Età</label>
             <select name="age" id="age">
-                <option value="">under 18</option>
-                <option value=""> over 18</option>
-                <option value=""> over 65</option>
+                <option value="age">under 18</option>
+                <option value="age"> over 18</option>
+                <option value="age"> over 65</option>
             </select>
         </div>
 
