--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <h1> CALCOLA IL TUO BIGLIETTO</h1>
     <div class="form-container">
-        <div>
+        <div class="name">
             <label for="username"> Nome e Cognome</label>
             <input type="text" id="username">
         </div>
 
-        <div>
+        <div class="distance">
             <label for="distance_km"> km da percorrere</label>
             <input type="number" id="distance_km" name="distance-in-km">
         </div>
 
-        <div>
+        <div class="age-number">
             <label for="age"> Età</label>
             <select name="age" id="age">
                 <option value="age">0-17</option>
@@ -30,7 +30,7 @@
             </select>
         </div>
 
-        <div>
+        <div class="btn">
             <button class="btn-ticket"> Genera</button>
             <button class="btn-reset"> Annulla</button>
         </div>
